# sensor-data-migrator

./: .env  pyproject.toml
migrator/: pyproject.toml
migrator/core/: connections.py  exceptions.py  protocols.py  settings.py  sql.py
migrator/core/utils/: timestamp.py  twilight.py
migrator/migrator/adapters/: orm.py
migrator/migrator/domain/: models.py
migrator/migrator/entrypoints/: lambda.py
migrator/migrator/repository/: dynamodb.py  postgres.py
migrator/migrator/services/: __init__.py
