[tool.poetry]
name = "migrator"
version = "0.1.0"
description = ""
authors = ["Prakash Prajapati <prakash.prajapati@tekkon.com.np>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.32"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
